--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,6 @@
     <title>project-starter-sample</title>
 </head>
 <body>
-  <div id="container"></div>
+  <div class="todoapp" id="root"></div>
 </body>
 </html>
