feat(generator): replace template names

--- a/static/client/index.html
+++ b/static/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>project-starter-sample</title>
+    <title>PROJECT_READABLE_NAME</title>
 </head>
 <body>
   <div id="root"></div>
